test/files/neg/t3995.check
t3995.scala:24: error: type mismatch;
 found   : String("")
 required: _1.F0 where val _1: Lift
  (new Lift).apply("")
                   ^
one error found
